# Cerise

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rolldown.config.js
apps/core/: __init__.py  config.yaml  main.py  pyproject.toml
apps/core/abilities/: __init__.py  base.py  decorator_ability.py  decorator_events.py  decorator_llm_tool.py  decorator_schema.py  decorators.py  loader.py  loader_types.py  loader_utils.py  mcp_manager.py  mcp_server.py  registry.py  scheduler.py
apps/core/abilities/builtin/: __init__.py  computer_use.py  python_runner.py
apps/core/abilities/plugins/: __init__.py
apps/core/ai/: __init__.py
apps/core/ai/agents/: __init__.py  models.py  service.py  store.py
apps/core/ai/dialogue/: __init__.py  context.py  engine.py  ports.py  proactive_config.py  proactive_service.py  proactive_state.py  proactive_time.py  session.py  streaming.py  tools.py
apps/core/ai/emotion/: __init__.py  analyzer.py  config.py  config_loader.py  config_merge.py  config_models.py  config_parsing.py  config_serialization.py  config_utils.py  lexicon.py  lexicon_keywords.py  lexicon_keywords_angry.py  lexicon_keywords_confused.py  lexicon_keywords_curious.py  lexicon_keywords_disgusted.py  lexicon_keywords_excited.py  lexicon_keywords_fearful.py  lexicon_keywords_happy.py  lexicon_keywords_sad.py  lexicon_keywords_shy.py  lexicon_keywords_sleepy.py  lexicon_keywords_surprised.py  lexicon_modifiers.py  manager.py  manager_lexicon.py  manager_rules.py  manager_sources.py  manager_types.py  pipeline.py  registry.py  rules.py  rules_base.py  rules_emoticon.py  rules_keyword.py  rules_pattern.py  rules_punctuation.py  rules_sentiment.py  types.py
apps/core/ai/memory/: __init__.py  compression.py  config.py  config_models.py  context_builder.py  core_profile_state_store.py  core_profile_store.py  engine.py  engine_association.py  engine_build.py  engine_ingest.py  engine_recall.py  engine_rerank.py  events.py  extraction.py  extraction_types.py  extractor_composite.py  extractor_llm.py  extractor_rule.py  kg.py  layer_store.py  maintenance.py  pipeline.py  procedural_habits_state_store.py  procedural_habits_store.py  registry.py  retrieval.py  scorers.py  semantic_facts_state_store.py  semantic_facts_store.py  sqlite_kg_search.py  sqlite_kg_store.py  sqlite_memory_store.py  sqlite_store.py  store.py  time_utils.py  types.py  vector_index.py
apps/core/ai/providers/: __init__.py  base.py  claude_provider.py  compat_providers.py  embedding_providers.py  gemini_provider.py  openai_provider.py  registry.py  registry_access.py  registry_config.py  rerank_http_provider.py  rerank_providers.py  zerolan_provider.py
apps/core/ai/skills/: __init__.py  models.py  service.py  store.py
apps/core/api/: __init__.py  admin.py  container.py  dependencies.py  gateway.py  lifespan.py  models.py  openai_adapter.py  openai_models.py  router.py
apps/core/api/admin/: __init__.py  abilities.py  characters.py  config.py  memory.py  models.py  plugins.py  plugins_deps.py  plugins_runtime.py  providers.py  security.py  stars.py
apps/core/api/routes/: __init__.py  agents.py  chat.py  emotion.py  health.py  live2d.py  openai.py  sessions.py  skills.py  websocket.py
apps/core/character/: __init__.py
apps/core/character/emotion/: __init__.py  state_machine.py  state_machine_decay.py  state_machine_serialization.py  state_machine_transitions.py  types.py
apps/core/character/personality/: __init__.py  model.py  personality_emotion.py  personality_prompt.py  personality_serialization.py  traits.py
apps/core/config/: __init__.py  app_config_loader.py  bootstrap.py  character_config_loader.py  file_utils.py  loader.py  mcp_config_loader.py  paths.py  plugins_registry_loader.py  providers_config_loader.py  schemas.py  star_config_loader.py  star_schema.py
apps/core/config/examples/: character.yaml  config.yaml  mcp.yaml  memory.yaml  proactive.yaml  providers.yaml
apps/core/contracts/: __init__.py  events.py  events_agent.py  events_dialogue.py  events_emotion.py  events_memory.py  events_operation.py
apps/core/events/: __init__.py  live2d.py  memory.py
apps/core/infrastructure/: __init__.py  bus_registry.py  config.py  event.py  event_types.py  message_bus.py  mp_broker.py  mp_bus.py  state.py
apps/core/infrastructure/mcp/: models.py  (+3 more)
apps/core/l2d/: __init__.py  service.py
apps/core/operation/: __init__.py  e2e_google_search.py  service.py  service_base.py  service_capture.py  service_input.py  service_vision.py  service_window.py  window.py
apps/core/plugins/: __init__.py  bridge.py  deps_jobs.py  installer.py  installer_dependencies.py  installer_install.py  installer_registry.py  jsonrpc.py  manager.py  name_safety.py  plugin_discovery.py  plugin_execution.py  plugin_lifecycle.py  plugin_queries.py  plugin_types.py  protocol.py  protocol_types.py  transport.py  transport_base.py  transport_http.py  transport_stdio.py
apps/core/runtime/: __init__.py  bus.py
apps/core/services/: __init__.py  local.py  ports.py
apps/core/tests/: __init__.py  conftest.py  fake_cerise_mcp_server.py  fake_mcp_server.py  test_admin_plugins.py  test_admin_plugins_runtime.py  test_agents.py  test_capability_scheduler.py  test_config.py  test_config_app.py  test_config_bootstrap.py  test_config_loader.py  test_config_paths.py  test_config_providers.py  test_container_plugins_dir.py  test_event_contracts.py  test_main.py  test_mcp_integration.py  test_mcp_server.py  test_memory_config.py  test_memory_enhancements.py  test_memory_layer_store.py  test_memory_pipeline.py  test_ocr_winrt_fallback.py  test_openai_compat.py  test_operation_events.py  test_operation_factories.py  test_plugin_deps_jobs.py  test_plugin_installer_security.py  test_plugin_name_safety.py  test_proactive_chat.py  test_providers.py  test_skills.py  test_star_config.py
apps/tts-server/: .gitignore  README.md  config.yaml  demo.py  main.py  pyproject.toml
apps/tts-server/src/: __init__.py  config.py  server.py
apps/tts-server/tests/: __init__.py  conftest.py  test_config.py
(+178 files in other folders)
